--- a/main.html
+++ b/main.html
@@ -10,7 +10,31 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<nav>
+   <ul>
+    <li>
+        <a href="https://nituk.ac.in/">Home</a>
+    </li>
+    <li>
+        <a href="https://nituk.ac.in/history">About us</a>
+    </li>
+    <li>
+        <a href="https://nituk.ac.in/nituk-contact">Contact us</a>
+    </li>
+   </ul> 
+</nav>
+<h1>
+    3 random audios
+</h1>
+<audio controls>
+    <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+</audio>
+<audio controls>
+    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+</audio>
+<audio controls>
+    <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
+</audio>
 </body>
 
 </html>
